# gOASper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
crates/goasper-core/: Cargo.toml
crates/goasper-core/src/: lib.rs
crates/goasper-io/: Cargo.toml
crates/goasper-io/src/: lib.rs
python/: generate_gosper.py
python/goasper/: __init__.py
python/goasper_ext/: Cargo.toml
python/goasper_ext/src/: lib.rs
python/tests/: test_cells.py  test_python_api.py
