[build-system]
requires = ["maturin>=1.9.3"]
build-backend = "maturin"

[project]
name = "goasper"
version = "0.1.0"
description = "MIT-licensed Rust + Python toolkit for GDSII/OASIS layouts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "kinimod0" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

[tool.maturin]
python-source = "python"
module-name = "goasper._lowlevel"
manifest-path = "python/goasper_ext/Cargo.toml"
strip = true
manylinux = "2_34"
sdist-include = ["crates", "Cargo.toml", "LICENSE", "README.md"]
